--- a/10.5.0/onbuild/Dockerfile
+++ b/10.5.0/onbuild/Dockerfile
@@ -9,4 +9,4 @@ ONBUILD COPY package.json /usr/src/app/
 ONBUILD RUN npm install
 ONBUILD COPY . /usr/src/app
 
-CMD ./node_modules/aws-kcl/bin/kcl-bootstrap --java /usr/bin/java -e -p ./config/$NODE_ENV.properties
+CMD npx kcl-bootstrap --java /usr/bin/java -e -p ./config/$NODE_ENV.properties
